Update 'etfh7979i-java-quarkus' component image to: quay.io/rhtap_qe/rhtap-qe-java-quarkus:b7d1147db3457b06a54379a5dac2bcda4c24930a@sha256:91f5ce45564a42654e182f6586ac9706edb13c248c2f3dd0c126126c2395f9d3

--- a/components/etfh7979i-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/etfh7979i-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: etfh7979i-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-quarkus:b7d1147db3457b06a54379a5dac2bcda4c24930a@sha256:91f5ce45564a42654e182f6586ac9706edb13c248c2f3dd0c126126c2395f9d3
+          name: container-image
